<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_primary"
    tools:context=".activity.RegisterActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/abl_register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/bg_primary"
        app:elevation="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_register"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize">

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/txt_register_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/register_title"
        android:textAllCaps="true"
        android:textColor="@color/color_accent"
        android:textSize="16sp"
        android:textStyle="italic"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/abl_register">

    </TextView>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_register_title"
        app:layout_constraintWidth_percent="0.8">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_id"
            android:textColor="@color/text_primary"
            android:textSize="16sp">

        </TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="10">

            <EditText
                android:id="@+id/edt_register_id"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:hint="@string/register_hint_email">

            </EditText>

            <Button
                android:id="@+id/btn_register_id_check"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="2"
                android:maxLines="2"
                android:padding="0dp"
                android:text="@string/register_id_duplicated"
                android:textSize="11sp">

            </Button>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/register_pw"
            android:textColor="@color/text_primary"
            android:textSize="16sp">

        </TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="10">

            <EditText
                android:id="@+id/edt_register_pw"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:hint="@string/register_hint_password">

            </EditText>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/register_pw_check"
            android:textColor="@color/text_primary"
            android:textSize="16sp">

        </TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="10">

            <EditText
                android:id="@+id/edt_register_pw_check"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:hint="@string/register_hint_password">

            </EditText>

        </LinearLayout>

        <TextView
            android:id="@+id/txt_register_pw_check_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_pw_warning"
            android:textColor="@color/text_error"
            android:textSize="12sp"
            android:visibility="invisible"
            tools:visibility="visible">

        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/register_nickname"
            android:textColor="@color/text_primary"
            android:textSize="16sp">

        </TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="10">

            <EditText
                android:id="@+id/edt_register_nickname"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:hint="@string/register_hint_nickname">

            </EditText>

            <Button
                android:id="@+id/btn_register_nickname_check"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="2"
                android:maxLines="2"
                android:padding="0dp"
                android:text="@string/register_id_duplicated"
                android:textSize="11sp">

            </Button>

        </LinearLayout>

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:text="@string/register_submit">

        </Button>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>