<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_secondary"
    tools:context=".fragment.MenuFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/abl_menu"
        android:layout_width="0dp"
        android:layout_height="?actionBarSize"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_menu"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize">

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/abl_menu">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menu_account_title"
                android:textColor="@color/text_primary"
                android:textSize="24sp"
                android:textStyle="bold">

            </TextView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:cardBackgroundColor="@color/bg_primary"
                app:cardCornerRadius="16dp"
                app:cardElevation="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txt_menu_nickname"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/text_primary"
                        android:textSize="16sp"
                        tools:text="Nickname">

                    </TextView>

                    <TextView
                        android:id="@+id/txt_menu_user_id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/text_secondary"
                        android:textSize="12sp"
                        tools:text="User ID (email@domain.name)">

                    </TextView>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/menu_application"
                android:textColor="@color/text_primary"
                android:textSize="24sp"
                android:textStyle="bold">

            </TextView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:cardBackgroundColor="@color/bg_primary"
                app:cardCornerRadius="16dp"
                app:cardElevation="0dp">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_menu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:fastScrollEnabled="false"
                    tools:itemCount="3"
                    tools:listitem="@layout/row_menu">

                </androidx.recyclerview.widget.RecyclerView>

            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/btn_menu_logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:text="@string/menu_logout"
                android:layout_marginBottom="24dp">

            </Button>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
