<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:showIn="@layout/fragment_community">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_cmlst"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        app:cardBackgroundColor="@color/bg_primary"
        app:cardCornerRadius="16dp"
        app:cardElevation="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img_cmlst_card_punch"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_margin="8dp"
                android:background="@color/bg_secondary"
                android:src="@drawable/hole_punch"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            </ImageView>

            <TextView
                android:id="@+id/txt_cmlst_written"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:gravity="end"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="2022/05/01">

            </TextView>

            <TextView
                android:id="@+id/txt_cmlst_sep"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:gravity="end"
                android:text="@string/cmlst_sep"
                app:layout_constraintRight_toLeftOf="@+id/txt_cmlst_written"
                app:layout_constraintTop_toTopOf="parent">

            </TextView>

            <TextView
                android:id="@+id/txt_cmlst_writer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:gravity="end"
                app:layout_constraintLeft_toRightOf="@+id/img_cmlst_card_punch"
                app:layout_constraintRight_toLeftOf="@+id/txt_cmlst_sep"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Writer">

            </TextView>

            <TextView
                android:id="@+id/txt_cmlst_content"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:maxLines="3"
                android:textColor="@color/text_primary"
                android:textSize="18sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/img_cmlst_card_punch"
                tools:text="다람쥐 헌 쳇바퀴에 타고파">

            </TextView>

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chpgrp_cmlst"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_cmlst_content">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_cmlst_room"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:checkable="false"
                    android:clickable="true"
                    android:focusable="true"
                    app:chipBackgroundColor="@color/bg_tertiary"
                    tools:text="Software Village">

                </com.google.android.material.chip.Chip>

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_cmlst_seat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="false"
                    android:clickable="true"
                    android:focusable="true"
                    app:chipBackgroundColor="@color/bg_tertiary"
                    tools:text="Seat #01">

                </com.google.android.material.chip.Chip>

            </com.google.android.material.chip.ChipGroup>

            <LinearLayout
                android:id="@+id/lnr_cmlst_info"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:orientation="horizontal"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/chpgrp_cmlst">

                <ImageView
                    android:id="@+id/img_cmlst_liked"
                    android:layout_width="12dp"
                    android:layout_height="12dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_like_filled"
                    app:tint="@color/text_primary">

                </ImageView>

                <TextView
                    android:id="@+id/txt_cmlst_liked"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="4dp"
                    android:textColor="@color/text_secondary"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    tools:text="2">

                </TextView>

                <ImageView
                    android:id="@+id/img_cmlst_comments"
                    android:layout_width="12dp"
                    android:layout_height="12dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="8dp"
                    android:src="@drawable/ic_comment"
                    app:tint="@color/text_primary">

                </ImageView>

                <TextView
                    android:id="@+id/txt_cmlst_comments"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="4dp"
                    android:textColor="@color/text_secondary"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    tools:text="2">

                </TextView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/lnr_cmlst_info">

                <LinearLayout
                    android:id="@+id/btn_cmlst_like"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="12dp"
                    tools:ignore="TouchTargetSizeCheck">

                    <ImageView
                        android:id="@+id/img_cmlst_like"
                        android:layout_width="16dp"
                        android:layout_height="16dp"
                        android:alpha="0.75"
                        android:src="@drawable/ic_like_outlined"
                        app:tint="@color/text_primary">

                    </ImageView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:alpha="0.75"
                        android:text="@string/cmlst_like"
                        android:textColor="@color/text_primary"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        app:tint="@color/text_primary">

                    </TextView>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/btn_cmlst_comment"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="12dp"
                    tools:ignore="TouchTargetSizeCheck">

                    <ImageView
                        android:layout_width="16dp"
                        android:layout_height="16dp"
                        android:alpha="0.75"
                        android:src="@drawable/ic_comment"
                        app:tint="@color/text_primary">

                    </ImageView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:alpha="0.75"
                        android:text="@string/cmlst_comment"
                        android:textColor="@color/text_primary"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        app:tint="@color/text_primary">

                    </TextView>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/btn_cmlst_more"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="12dp"
                    tools:ignore="TouchTargetSizeCheck">

                    <ImageView
                        android:layout_width="16dp"
                        android:layout_height="16dp"
                        android:alpha="0.75"
                        android:src="@drawable/ic_horiz_more"
                        app:tint="@color/text_primary">

                    </ImageView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:alpha="0.75"
                        android:text="@string/cmlst_more"
                        android:textColor="@color/text_primary"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        app:tint="@color/text_primary">

                    </TextView>

                </LinearLayout>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
